--- a/example/20-crd-extensions.gardener.cloud_infrastructures.yaml
+++ b/example/20-crd-extensions.gardener.cloud_infrastructures.yaml
@@ -3,7 +3,7 @@ apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
   annotations:
-    controller-gen.kubebuilder.io/version: v0.10.0
+    controller-gen.kubebuilder.io/version: v0.11.1
   creationTimestamp: null
   name: infrastructures.extensions.gardener.cloud
 spec:
@@ -65,7 +65,7 @@ spec:
                 type: string
               secretRef:
                 description: SecretRef is a reference to a secret that contains the
-                  actual result of the generated cloud config.
+                  cloud provider credentials.
                 properties:
                   name:
                     description: name is unique within a namespace to reference a
