--- a/charts/gardener-extension-provider-vsphere/templates/deployment.yaml
+++ b/charts/gardener-extension-provider-vsphere/templates/deployment.yaml
@@ -30,6 +30,8 @@ spec:
         prometheus.io/port: "{{ .Values.metricsPort }}"
         {{- end }}
       labels:
+        networking.gardener.cloud/to-runtime-apiserver: allowed
+        networking.gardener.cloud/to-dns: allowed
 {{ include "labels" . | indent 8 }}
     spec:
       priorityClassName: gardener-extension-provider-vsphere
