--- a/charts/gardener-extension-provider-vsphere/templates/service.yaml
+++ b/charts/gardener-extension-provider-vsphere/templates/service.yaml
@@ -3,6 +3,8 @@ kind: Service
 metadata:
   name: {{ include "name" . }}
   namespace: {{ .Release.Namespace }}
+  annotations:
+    networking.resources.gardener.cloud/from-world-to-ports: '[{"protocol":"TCP","port":{{ .Values.webhookConfig.serverPort }}}]'
   labels:
 {{ include "labels" . | indent 4 }}
 spec:
