--- a/charts/internal/seed-controlplane/charts/csi-vsphere/templates/csi-snapshot-validation-webhook-deployment.yaml
+++ b/charts/internal/seed-controlplane/charts/csi-vsphere/templates/csi-snapshot-validation-webhook-deployment.yaml
@@ -19,6 +19,8 @@ spec:
 {{- end }}
       labels:
         app: snapshot-validation
+        networking.gardener.cloud/to-dns: allowed
+        networking.resources.gardener.cloud/to-kube-apiserver-tcp-443: allowed
     spec:
       containers:
       - name: vsphere-csi-snapshot-validation
