Make the `csi-snapshot-validation` Service topology-aware

--- a/charts/internal/seed-controlplane/charts/csi-vsphere/values.yaml
+++ b/charts/internal/seed-controlplane/charts/csi-vsphere/values.yaml
@@ -95,6 +95,7 @@ csiSnapshotValidationWebhook:
     memory: 50Mi
   secrets:
     server: csi-snapshot-validation-server
+  topologyAwareRoutingEnabled: false
 
 volumesnapshots:
   enabled: false # currently not supported by vsphere-csi-driver
