Make the `gardener-extension-provider-vsphere` Service topology-aware

--- a/charts/gardener-extension-provider-vsphere/values.yaml
+++ b/charts/gardener-extension-provider-vsphere/values.yaml
@@ -90,3 +90,6 @@ gardener:
         providerConfig:
           storagePolicyName: gardener-fast-etcd-main
           #svStorageClass: my-sv-storage-class
+      settings:
+        topologyAwareRouting:
+          enabled: false
