--- a/charts/internal/shoot-system-components/charts/csi-vsphere/templates/daemonset.yaml
+++ b/charts/internal/shoot-system-components/charts/csi-vsphere/templates/daemonset.yaml
@@ -85,6 +85,8 @@ spec:
           value: "PRODUCTION" # Options: DEVELOPMENT, PRODUCTION
         - name: CSI_NAMESPACE
           value: kube-system
+        - name: NODEGETINFO_WATCH_TIMEOUT_MINUTES
+          value: "1"
         securityContext:
           privileged: true
           capabilities:
