--- a/charts/images.yaml
+++ b/charts/images.yaml
@@ -2,7 +2,7 @@ images:
 - name: csi-attacher
   sourceRepository: github.com/kubernetes-csi/external-attacher
   repository: registry.k8s.io/sig-storage/csi-attacher
-  tag: v4.1.0
+  tag: v4.2.0
   labels:
     - name: 'gardener.cloud/cve-categorisation'
       value:
@@ -134,9 +134,9 @@ images:
       integrity_requirement: 'high'
       availability_requirement: 'low'
 - name: vsphere-csi-driver-controller
-  sourceRepository: github.com/gardener/vsphere-csi-driver
-  repository: eu.gcr.io/gardener-project/patches/vsphere-csi-driver/driver
-  tag: v2.7.0-gardener1
+  sourceRepository: github.com/kubernetes-sigs/vsphere-csi-driver
+  repository: gcr.io/cloud-provider-vsphere/csi/release/driver
+  tag: v3.0.0
   labels:
     - name: 'gardener.cloud/cve-categorisation'
       value:
@@ -147,9 +147,9 @@ images:
         integrity_requirement: 'high'
         availability_requirement: 'low'
 - name: vsphere-csi-driver-node
-  sourceRepository: github.com/gardener/vsphere-csi-driver
-  repository: eu.gcr.io/gardener-project/patches/vsphere-csi-driver/driver
-  tag: v2.7.0-gardener1
+  sourceRepository: github.com/kubernetes-sigs/vsphere-csi-driver
+  repository: gcr.io/cloud-provider-vsphere/csi/release/driver
+  tag: v3.0.0
   labels:
     - name: 'gardener.cloud/cve-categorisation'
       value:
@@ -160,9 +160,9 @@ images:
         integrity_requirement: 'high'
         availability_requirement: 'low'
 - name: vsphere-csi-driver-syncer
-  sourceRepository: github.com/gardener/vsphere-csi-driver
-  repository: eu.gcr.io/gardener-project/patches/vsphere-csi-driver/syncer
-  tag: v2.7.0-gardener1
+  sourceRepository: github.com/kubernetes-sigs/vsphere-csi-driver
+  repository: gcr.io/cloud-provider-vsphere/csi/release/syncer
+  tag: v3.0.0
   labels:
     - name: 'gardener.cloud/cve-categorisation'
       value:
