--- a/charts/internal/shoot-system-components/charts/csi-vsphere/templates/clusterrole-csi-driver.yaml
+++ b/charts/internal/shoot-system-components/charts/csi-vsphere/templates/clusterrole-csi-driver.yaml
@@ -11,6 +11,9 @@ rules:
   resources: ["namespaces"]
   verbs: ["get", "list"]
 - apiGroups: [""]
+  resources: ["persistentvolumeclaims"]
+  verbs: ["get", "list", "watch"]
+- apiGroups: [""]
   resources: ["persistentvolumes"]
   verbs: ["get", "list", "watch", "update", "patch"]
 - apiGroups: ["storage.k8s.io"]
@@ -22,6 +25,9 @@ rules:
   resources: ["podsecuritypolicies"]
   verbs: ["use"]
 {{- end }}
+- apiGroups: ["cns.vmware.com"]
+  resources: ["cnsvolumeinfos"]
+  verbs: ["create", "get", "list", "watch", "delete"]
 - apiGroups: ["apiextensions.k8s.io"]
   resources: ["customresourcedefinitions"]
   verbs: ["create", "get", "list", "update", "delete","patch"]
@@ -34,4 +40,6 @@ rules:
 - apiGroups: ["storage.k8s.io"]
   resources: ["csinodes"]
   verbs: ["get", "list", "watch"]
-
+- apiGroups: [ "snapshot.storage.k8s.io" ]
+  resources: [ "volumesnapshotcontents" ]
+  verbs: ["get", "list", "watch"]
