change DNS policy for vsphere-csi-node to default

--- a/charts/internal/shoot-system-components/charts/csi-vsphere/templates/daemonset.yaml
+++ b/charts/internal/shoot-system-components/charts/csi-vsphere/templates/daemonset.yaml
@@ -22,7 +22,7 @@ spec:
         role: vsphere-csi
     spec:
       hostNetwork: true
-      dnsPolicy: "ClusterFirstWithHostNet"
+      dnsPolicy: Default
       priorityClassName: system-node-critical
       serviceAccount: csi-driver-node
       tolerations:
