setting KUBERNETES_SERVICE_HOST for vsphere-csi-node

--- a/charts/internal/shoot-system-components/charts/csi-vsphere/templates/daemonset.yaml
+++ b/charts/internal/shoot-system-components/charts/csi-vsphere/templates/daemonset.yaml
@@ -87,6 +87,8 @@ spec:
           value: kube-system
         - name: NODEGETINFO_WATCH_TIMEOUT_MINUTES
           value: "1"
+        - name: KUBERNETES_SERVICE_HOST
+          value: {{ .Values.kubernetesServiceHost }}
         securityContext:
           privileged: true
           capabilities:
