--- a/charts/internal/shoot-system-components/charts/csi-vsphere/values.yaml
+++ b/charts/internal/shoot-system-components/charts/csi-vsphere/values.yaml
@@ -11,6 +11,7 @@ datacenters: dc1
 insecureFlag: true
 # topology-aware setup
 topologyAware: true
+kubernetesServiceHost: kubernetes.example.com
 
 #labelRegion: k8s-region
 #labelZone: k8s-zone
