Create automatic hotfix branches
Signed-off-by: Brian Topping <brian.topping@sap.com>

--- a/branch.cfg
+++ b/branch.cfg
@@ -1,3 +1,14 @@
 cfgs:
   default:
     branches: ['main', 'e2e', 'test-runner']
+  gardener-extension-provider-vsphere:
+    index: 1
+    branches: ['release-.*']
+    inherit:
+      default:
+        jobs:
+          release:
+            traits:
+              release:
+                nextversion: 'bump_patch'
+
