Update branch.cfg with content from etcd-druid. Nice!
Signed-off-by: Brian Topping <brian.topping@sap.com>

--- a/branch.cfg
+++ b/branch.cfg
@@ -1,14 +1,26 @@
 cfgs:
   default:
     branches: ['main', 'e2e', 'test-runner']
-  gardener-extension-provider-vsphere:
-    index: 1
+    inherit:
+          gardener-extension-provider-vsphere-updates:
+            jobs:
+              create_update_pull_requests:
+                repo:
+                  trigger: false
+                  disable_ci_skip: true
+                steps: ~
+                traits:
+                  component_descriptor: ~
+                  update_component_deps: ~
+                  cronjob:
+                    interval: '5m'
+                  version: ~
+  release-branches:
     branches: ['release-.*']
     inherit:
-      default:
+      gardener-extension-provider-vsphere:
         jobs:
           release:
             traits:
               release:
                 nextversion: 'bump_patch'
-
