Attempt to copy https://github.com/gardener/gardener-extension-provider-aws/pull/238/commits/4a18dc2d4d6450ec68a55fa6d227a702d9e0c34e to fix issue with `credentialsSecretRef` introduced in https://github.com/gardener/gardener-extension-provider-vsphere/commit/8cf35d1259945babdf0b17083ae7aa7308f92066
Signed-off-by: Brian Topping <brian.topping@sap.com>

--- a/charts/internal/machineclass/values.yaml
+++ b/charts/internal/machineclass/values.yaml
@@ -29,6 +29,9 @@ machineClasses:
     vsphereUsername: "a_user"
     vspherePassword: "a_password"
     vsphereInsecureSSL: "true"
+  credentialsSecretRef:
+    name: cloudprovider
+    namespace: shoot-namespace
   tags:
   - kubernetes.io/cluster/foo
   - kubernetes.io/role/node
