remove test-runner
Signed-off-by: Brian Topping <brian.topping@sap.com>

--- a/branch.cfg
+++ b/branch.cfg
@@ -1,6 +1,6 @@
 cfgs:
   default:
-    branches: ['main', 'e2e', 'test-runner']
+    branches: ['main', 'e2e']
     inherit:
           gardener-extension-provider-vsphere-updates:
             jobs:
