Remove old and obsolete logging configuration

--- a/charts/gardener-extension-provider-vsphere/templates/clusterfilters-logging.yaml
+++ b/charts/gardener-extension-provider-vsphere/templates/clusterfilters-logging.yaml
@@ -3,6 +3,7 @@ kind: ClusterFilter
 metadata:
   labels:
     fluentbit.gardener/type: "seed"
+    fluentbit.gardener.cloud/type: "seed"
   name: cloud-controller-manager-vsphere-cloud-controller-manager
 spec:
   filters:
@@ -17,6 +18,7 @@ kind: ClusterFilter
 metadata:
   labels:
     fluentbit.gardener/type: "seed"
+    fluentbit.gardener.cloud/type: "seed"
   name: machine-controller-manager-vsphere-machine-controller-manager
 spec:
   filters:
@@ -31,6 +33,7 @@ kind: ClusterFilter
 metadata:
   labels:
     fluentbit.gardener/type: "seed"
+    fluentbit.gardener.cloud/type: "seed"
   name: machine-controller-manager-machine-controller-manager-provider-vsphere
 spec:
   filters:
@@ -45,6 +48,7 @@ kind: ClusterFilter
 metadata:
   labels:
     fluentbit.gardener/type: "seed"
+    fluentbit.gardener.cloud/type: "seed"
   name: vsphere-csi-controller-vsphere-csi
 spec:
   filters:
@@ -53,27 +57,3 @@ spec:
       parser: kube-apiserver-parser
       reserveData: true
   match: kubernetes.*vsphere-csi-controller*vsphere-csi*
----
-apiVersion: fluentbit.fluent.io/v1alpha2
-kind: ClusterFilter
-metadata:
-  labels:
-    fluentbit.gardener/type: "seed"
-  name: modify-provider-vsphere
-spec:
-  filters:
-  - modify:
-      conditions:
-        - keyValueMatches:
-            tag: ^kubernetes\.var\.log\.containers\.(cloud-controller-manager-.+?_.+?_vsphere-cloud-controller-manager|vsphere-csi-controller-.+?_.+?_vsphere-csi)
-      rules:
-        - add:
-            __gardener_multitenant_id__: operator;user
-  - modify:
-      conditions:
-        - keyValueMatches:
-            tag: ^kubernetes\.var\.log\.containers\.machine-controller-manager-.+?_.+?_(machine-controller-manager-provider-vsphere|vsphere-machine-controller-manager)
-      rules:
-        - add:
-            __gardener_multitenant_id__: operator;user
-  match:  kubernetes.*
