Populate MCM mgmt responsibility to controllers/webhook
- For the `Worker` controller, we do not need to do anything further other than not providing the MCM resources. The generic actuator will be adapted in subsequent commits to not manage MCM in this case.
- For the `healthcheck` controller, the code will be adapted in a subsequent commit to implmenet the needed logic.
- For the `controlplane` webhook, the code will be adapted in a subsequent commit to implement the needed mutation logic (currently only returns `nil`).

--- a/charts/gardener-extension-provider-vsphere/templates/deployment.yaml
+++ b/charts/gardener-extension-provider-vsphere/templates/deployment.yaml
@@ -62,6 +62,9 @@ spec:
         {{- if .Values.metricsPort }}
         - --metrics-bind-address=:{{ .Values.metricsPort }}
         {{- end }}
+        {{- if .Values.gardener.gardenlet.featureGates.MachineControllerManagerDeployment }}
+        - --gardenlet-manages-mcm={{ .Values.gardener.gardenlet.featureGates.MachineControllerManagerDeployment }}
+        {{- end }}
         env:
         - name: LEADER_ELECTION_NAMESPACE
           valueFrom:
