--- a/.docforge/manifest.yaml
+++ b/.docforge/manifest.yaml
@@ -1,6 +1,30 @@
 structure:
 - name: _index.md
   source: /README.md
-- name: docs
+- name: development
+  properties:
+    frontmatter:
+      title: Development
+      weight: 1
+      categories:
+        - Developers
   nodesSelector:
-    path: /docs
+    path: /docs/development
+- name: operations
+  properties:
+    frontmatter:
+      title: Operations
+      weight: 2
+      categories:
+        - Operators
+  nodesSelector:
+    path: /docs/operations
+- name: usage
+  properties:
+    frontmatter:
+      title: Usage
+      weight: 3
+      categories:
+        - Users
+  nodesSelector:
+    path: /docs/usage
