Update objectSelector to validatingwebhook-validator.yaml
Signed-off-by: Brian Topping <brian.topping@sap.com>

--- a/charts/gardener-extension-validator-vsphere/charts/application/templates/validatingwebhook-validator.yaml
+++ b/charts/gardener-extension-validator-vsphere/charts/application/templates/validatingwebhook-validator.yaml
@@ -49,7 +49,7 @@ webhooks:
   failurePolicy: Fail
   objectSelector:
     matchLabels:
-      provider.shoot.gardener.cloud/gcp: "true"
+      provider.shoot.gardener.cloud/vsphere: "true"
   namespaceSelector: {}
   sideEffects: None
   admissionReviewVersions:
