--- a/charts/internal/machineclass/values.yaml
+++ b/charts/internal/machineclass/values.yaml
@@ -21,6 +21,14 @@ machineClasses:
     size: 20
   description: An optional description for machines created by that class.
   machineType: t1.small
+  nodeTemplate:
+    capacity:
+      cpu: 2
+      gpu: 1
+      memory: 25Gi
+    instanceType: n1-standard-4
+    region: europe-west1
+    zone: europe-west1-b
   sshKeys:
   - 12345-abcd567-aaf2
   secret:
