Cherry pick from `release-v0.29`cbranch
Signed-off-by: Brian Topping <brian.topping@sap.com>

--- a/charts/gardener-extension-validator-vsphere/charts/application/templates/validatingwebhook-validator.yaml
+++ b/charts/gardener-extension-validator-vsphere/charts/application/templates/validatingwebhook-validator.yaml
@@ -47,7 +47,9 @@ webhooks:
     resources:
     - secrets
   failurePolicy: Fail
-  objectSelector: {}
+  objectSelector:
+    matchLabels:
+      provider.extensions.gardener.cloud/vsphere: "true"
   namespaceSelector: {}
   sideEffects: None
   admissionReviewVersions:
