add verify step

--- a/branch.cfg
+++ b/branch.cfg
@@ -2,7 +2,7 @@ cfgs:
   default:
     branches: ['main', 'e2e']
     inherit:
-      gardener-extension-provider-vsphere:
+      gardener-extension-provider-vsphere-updates:
         jobs:
           create_update_pull_requests:
             repo:
@@ -15,10 +15,20 @@ cfgs:
               cronjob:
                 interval: '5m'
               version: ~
+      gardener-extension-provider-vsphere:
+        base_definition:
+          steps:
+            verify:
+              image: 'golang:1.20.7'
+
   release-branches:
     branches: ['release-.*']
     inherit:
       gardener-extension-provider-vsphere:
+        base_definition:
+          steps:
+            verify:
+              image: 'golang:1.20.7'
         jobs:
           release:
             traits:
