--- a/charts/internal/shoot-storageclasses/templates/storageclasses.yaml
+++ b/charts/internal/shoot-storageclasses/templates/storageclasses.yaml
@@ -2,7 +2,7 @@
 apiVersion: {{ include "storageclassversion" . }}
 kind: StorageClass
 metadata:
-  name: default-class
+  name: default
   annotations:
     storageclass.kubernetes.io/is-default-class: "true"
     resources.gardener.cloud/delete-on-invalid-update: "true"
