switch GCR -> Artifact-Registry
GCR has been deprecated [0] in favour of Artifact-Registry.

Thus, change push-targets for OCI-Images:

- europe-docker.pkg.dev/gardener-project/snapshots for snapshots
- europe-docker.pkg.dev/gardener-project/releases for releases
- europe-docker.pkg.dev/gardener-project/public for read-access to
  snapshots + releases

[0]
https://cloud.google.com/artifact-registry/docs/transition/transition-from-gcr

--- a/charts/images.yaml
+++ b/charts/images.yaml
@@ -109,7 +109,7 @@ images:
         availability_requirement: 'low'
 - name: machine-controller-manager
   sourceRepository: github.com/gardener/machine-controller-manager
-  repository: eu.gcr.io/gardener-project/gardener/machine-controller-manager
+  repository: europe-docker.pkg.dev/gardener-project/releases/gardener/machine-controller-manager
   tag: "v0.49.3"
   labels:
   - name: 'gardener.cloud/cve-categorisation'
@@ -122,7 +122,7 @@ images:
       availability_requirement: 'low'
 - name: machine-controller-manager-provider-vsphere
   sourceRepository: github.com/gardener/machine-controller-manager-provider-vsphere
-  repository: eu.gcr.io/gardener-project/gardener/machine-controller-manager-provider-vsphere
+  repository: europe-docker.pkg.dev/gardener-project/releases/gardener/machine-controller-manager-provider-vsphere
   tag: "v0.23.0"
   labels:
   - name: 'gardener.cloud/cve-categorisation'
