--- a/charts/gardener-extension-provider-vsphere/values.yaml
+++ b/charts/gardener-extension-provider-vsphere/values.yaml
@@ -1,5 +1,5 @@
 image:
-  repository: eu.gcr.io/gardener-project/gardener/extensions/provider-vsphere
+  repository: europe-docker.pkg.dev/gardener-project/public/gardener/extensions/provider-vsphere
   tag: latest
   pullPolicy: IfNotPresent
 
