--- a/charts/gardener-extension-validator-vsphere/values.yaml
+++ b/charts/gardener-extension-validator-vsphere/values.yaml
@@ -4,7 +4,7 @@ global:
     user:
       name: ""
   image:
-    repository: eu.gcr.io/gardener-project/gardener/extensions/validator-vsphere
+    repository: europe-docker.pkg.dev/gardener-project/public/gardener/extensions/validator-vsphere
     tag: latest
     pullPolicy: IfNotPresent
   replicaCount: 1
